[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-cain"
version = "1.0.0"
description = "Active Directory Lab State Snapshot & Restore Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joe"},
]

dependencies = [
    "ldap3>=2.9.1",
    "click>=8.1",
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "black>=23.12",
    "mypy>=1.7",
]

[project.scripts]
ad-cain = "ad_cain.cli:cli"

[tool.setuptools.packages.find]
include = ["ad_cain*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
